fixed overflow problem

--- a/Unit 1/reddit_clone/style.css
+++ b/Unit 1/reddit_clone/style.css
@@ -18,6 +18,13 @@ body > div > form > div {
 	padding: 5px;
 }
 
+.commentBox{
+	height: 30px;
+	width: 100%;
+	overflow-x:hidden;
+	overflow-y: scroll;
+}
+
 .postTitle{
 	float:left;
 	margin-left: 5px;
